--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -32,9 +32,13 @@ jobs:
       # - run: csso ./css/style.css -o ./css/style.css
       - run: html-minifier --collapse-boolean-attributes --collapse-whitespace --minify-css --minify-js --minify-urls --remove-attribute-quotes --remove-comments --remove-empty-attributes --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-style-link-type-attributes --remove-tag-whitespace --use-short-doctype -o index.html index.html
 
-      # (Force) push changes to `gh-pages` branch
-      - run: |
-          git config user.name mamrehn
-          git config user.email mamrehn@user.noreply.github.com
-          git commit -am 'Automated minify of ${{ github.sha }}'
-          git push --force -u origin main:gh-pages
+      # Commit and push to `gh-pages` using a PAT
+      - name: Commit and Push
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+        run: |
+          git config user.name "mamrehn"
+          git config user.email "mamrehn@user.noreply.github.com"
+          git add .
+          git diff-index --quiet HEAD || git commit -m "Automated minify of ${{ github.sha }}"
+          git push --force https://x-access-token:${GH_PAT}@github.com/mamrehn/taskcards.git HEAD:gh-pages
