--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -1,42 +1,42 @@
-# Based on https://github.com/aricooperdavis/Spotilist/blob/main/.github/workflows/minify.yml
-# 
-# This workflow is triggered by a push to the `main` branch
-# which it checks out, minimises the appropriate html/css/js
-# in-place, and pushes the changes to the `gh-pages` branch
-
-name: minify
-run-name: Minify JS/CSS/HTML [gh-pages branch]
-
+name: Minify and Deploy
+run-name: Minify JS/CSS/HTML and deploy to gh-pages
+# Run on pushes to `main` branch
 on:
   push:
     branches:
       - 'main'
+  # Optional: Allow manual triggering
+  workflow_dispatch:
 
 jobs:
   checkout-minify-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Explicit permission to write to the repository
+    
     steps:
-      - name: Checkout main
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4  # Updated to latest version
         with:
-          fetch-depth: 0  # Needed to fetch other branches later
-
-      - name: Set up Node.js and minify tools
-        uses: actions/setup-node@v3
+          fetch-depth: 0  # Get all history for proper branch handling
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4  # Updated to latest version
         with:
-          node-version: '22'
-      - run: npm install -g terser csso-cli html-minifier
-
-      - name: Fetch gh-pages and switch
+          node-version: '22'  # Updated to more recent LTS version
+          cache: 'npm'  # Enable caching for faster installations
+      
+      - name: Install minification tools
         run: |
-          git fetch origin gh-pages
-          git switch gh-pages || git switch -c gh-pages
-
-      - name: Copy index.html from main
-        run: |
-          git checkout main -- index.html
-
-      - name: Minify index.html
+          npm install -g terser csso-cli html-minifier
+      
+      - name: Minify JavaScript
+        run: terser ./js/spotilist.js --compress --mangle -o ./js/spotilist.js
+      
+      - name: Minify CSS
+        run: csso ./css/style.css -o ./css/style.css
+      
+      - name: Minify HTML
         run: |
           html-minifier \
             --collapse-boolean-attributes \
@@ -54,13 +54,20 @@ jobs:
             --remove-tag-whitespace \
             --use-short-doctype \
             -o index.html index.html
-
-      - name: Commit and push to gh-pages
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+      
+      - name: Configure Git
         run: |
-          git config user.name "mamrehn"
-          git config user.email "mamrehn@user.noreply.github.com"
-          git add index.html
-          git diff-index --quiet HEAD || git commit -m "Automated minify of ${{ github.sha }}"
-          git push --force https://x-access-token:${GH_PAT}@github.com/mamrehn/taskcards.git HEAD:gh-pages
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+      
+      - name: Commit minified files
+        run: |
+          git add -A
+          # Only commit if there are changes
+          git diff --quiet && git diff --staged --quiet || git commit -m "Minify for deployment (SHA: ${{ github.sha }})"
+      
+      - name: Deploy to gh-pages
+        # Use a conditional to handle empty commits gracefully
+        run: |
+          git push --force origin HEAD:gh-pages || echo "No changes to push"
+          echo "🚀 Successfully deployed to gh-pages branch"
