--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -32,8 +32,8 @@ jobs:
      # - name: Minify JavaScript
      #   run: terser ./js/spotilist.js --compress --mangle -o ./js/spotilist.js
       
-     # - name: Minify CSS
-     #   run: csso ./css/style.css -o ./css/style.css
+      - name: Minify CSS
+        run: csso style.css -o style.css
       
       - name: Minify HTML
         run: |
