--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -34,6 +34,12 @@ jobs:
       - name: Minify CSS
         run: csso style.css -o style.css
 
+      - name: Patch HTML to add inline attributes
+        run: |
+          sed -i 's/<link rel="stylesheet" href="\(.*\.css\)">/<link rel="stylesheet" href="\1" inline>/' index.html
+          sed -i 's/<link href="\(.*\.css\)" rel="stylesheet">/<link href="\1" rel="stylesheet" inline>/' index.html
+          sed -i 's/<script src="\(.*\.js\)"><\/script>/<script src="\1" inline><\/script>/' index.html
+
       - name: Inline JS and CSS into HTML
         run: |
           inline-source index.html --compress false --root ./ -o index.html
