--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Inline JS and CSS into HTML
         run: |
-          inline-source index.html --compress false --root ./ > index.html
+          cat index.html | inline-source --compress false --root ./ > index.html
 
       - name: Minify inlined HTML
         run: |
