rewrite: Backend code to WebSocket Node server implementation for Qlash multiplayer quiz instead of Supabase DB.
- Create Dockerfile for server deployment
- Add README.md for local development and deployment instructions
- Configure Fly.io deployment with fly.toml
- Initialize package.json and package-lock.json with WebSocket dependency
- Implement server.js with room management, player connections, and message relay
- Include health check endpoint and connection handling logic

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Supabase configuration (contains sensitive API keys)
+# WebSocket server configuration (local dev overrides)
 qlash-config.js
 
 # Node modules (if using npm locally)
