--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -28,40 +28,21 @@ jobs:
         run: |
           npm install -g terser csso-cli html-minifier inline-source-cli
       
-      - name: Inject Supabase credentials from secrets
+      - name: Inject WebSocket URL from secrets
         env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+          WS_URL: ${{ secrets.WS_URL }}
         run: |
-          echo "🔍 Checking if secrets are available..."
-          if [ -z "$SUPABASE_URL" ]; then
-            echo "❌ SUPABASE_URL is empty or not set!"
-          else
-            echo "✅ SUPABASE_URL is set (length: ${#SUPABASE_URL})"
+          if [ -z "$WS_URL" ]; then
+            echo "WS_URL is empty or not set!"
+            exit 1
           fi
-          if [ -z "$SUPABASE_ANON_KEY" ]; then
-            echo "❌ SUPABASE_ANON_KEY is empty or not set!"
-          else
-            echo "✅ SUPABASE_ANON_KEY is set (length: ${#SUPABASE_ANON_KEY})"
+          echo "WS_URL is set (length: ${#WS_URL})"
+          sed -i "s|'__WS_URL__'|'$WS_URL'|g" qlash.js
+          if grep -q "__WS_URL__" qlash.js; then
+            echo "WS_URL injection may have failed"
+            exit 1
           fi
-          
-          echo "🔄 Injecting credentials..."
-          sed -i "s|'__SUPABASE_URL__'|'$SUPABASE_URL'|g" qlash.js
-          sed -i "s|'__SUPABASE_ANON_KEY__'|'$SUPABASE_ANON_KEY'|g" qlash.js
-          
-          echo "✅ Credentials injected. Verifying..."
-          if grep -q "SUPABASE_URL = 'https://" qlash.js; then
-            echo "✅ URL injection successful"
-          else
-            echo "⚠️ URL injection may have failed"
-            grep "SUPABASE_URL" qlash.js | head -1
-          fi
-          if grep -q "SUPABASE_ANON_KEY = 'eyJ" qlash.js; then
-            echo "✅ Key injection successful"
-          else
-            echo "⚠️ Key injection may have failed"
-            grep "SUPABASE_ANON_KEY" qlash.js | head -1
-          fi
+          echo "WS_URL injected successfully"
       
       - name: Minify JavaScript files
         run: |
